<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/crime_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/crime_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receipt_title_label" />

            <EditText
                android:id="@+id/receipt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/receipt_title_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receipt_shop_name"/>
            <EditText
                android:id="@+id/receipt_shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/receipt_shop_name_hint"/>


        </LinearLayout>
    </LinearLayout>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_details_label" />

    <Button
        android:id="@+id/receipt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_picker_title"/>

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_solved_label" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_comment_label"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receipt_comment_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/latitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude_text"/>

        <TextView
            android:id="@+id/longitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude_text"/>

        <Button
            android:id="@+id/receipt_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receipt_location_text" />
    </LinearLayout>


    <Button
        android:id="@+id/receipt_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_report_text" />

    <Button
        android:id="@+id/receipt_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_delete"/>

</LinearLayout>